--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Clase 2 de Git</h1>
+    <form action="#">
+        <input type="text" name="name">
+        <input type="submit" name="send">
+    </form>
 </body>
 </html>
